5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1595_2895.log
== TEST (2019-03-26 16:35:16) 
-- CODE:
var= input(int("quantidade de jogos: "))
frete=print(float(var+10))
valor= print(var+frete)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var= input(int("quantidade de jogos: "))
ValueError: invalid literal for int() with base 10: 'quantidade de jogos: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:35:32) 
-- CODE:
var= input(float(int("quantidade de jogos: "))
frete=print(float(var+10))
valor= print(var+frete)

-- ERROR:
File "XXXX", line 2
    frete=print(float(var+10))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:35:42) 
-- CODE:
var= input(int("quantidade de jogos: "))
frete=print(float(var+10))
valor= print(var+frete)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var= input(int("quantidade de jogos: "))
ValueError: invalid literal for int() with base 10: 'quantidade de jogos: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:35:55) 
-- CODE:
var= input(int("quantidade de jogos: "))
frete=print(float(var+100))
valor= print(var+frete)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var= input(int("quantidade de jogos: "))
ValueError: invalid literal for int() with base 10: 'quantidade de jogos: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:36:05) 
-- CODE:
var= input(int("quantidade de jogos: "))
frete=print(float(var+55))
valor= print(var+frete)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var= input(int("quantidade de jogos: "))
ValueError: invalid literal for int() with base 10: 'quantidade de jogos: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:36:28) 
-- CODE:
var= input(int("quantidade de jogos: 45"))
frete=print(float(var+55))
valor= print(var+frete)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var= input(int("quantidade de jogos: 45"))
ValueError: invalid literal for int() with base 10: 'quantidade de jogos: 45'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:36:50) 
-- CODE:
var= input(int("quantidade de jogos: 45"))
frete=print(float(var+55))
valor= print(var+frete)

-- EXECUTION TIME:
0.194984
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 1, in <module>
    var= input(int("quantidade de jogos: 45"))
ValueError: invalid literal for int() with base 10: 'quantidade de jogos: 45'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:37:23) 
-- CODE:
q= 45
var= input(int(q)
frete=print(float(var+55))
valor= print(var+frete)

-- ERROR:
File "XXXX", line 3
    frete=print(float(var+55))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:37:41) 
-- CODE:
q= 45
var= input(int(q)
frete=print(int(var+55))
valor= print(float(var+frete)

-- ERROR:
File "XXXX", line 3
    frete=print(int(var+55))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:37:55) 
-- CODE:
q= 45
var = input(int(q)
frete =print(int(var+55))
valor = print(float(var+frete)

-- ERROR:
File "XXXX", line 3
    frete =print(int(var+55))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:38:14) 
-- CODE:
q= 45
var = input(int(q)
frete =print(int(float(var+55))
valor = print(float(var+frete)

-- ERROR:
File "XXXX", line 3
    frete =print(int(float(var+55))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:38:23) 
-- CODE:
q= 45
var = input(int(q)
frete =print(var+55))
valor = print(float(var+frete)

-- ERROR:
File "XXXX", line 3
    frete =print(var+55))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:52:32) 
-- CODE:
var=print("Quantidade de Jogos:5")
print(float(var))
var1= print("frete")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(var))
TypeError: float() argument must be a string or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:52:44) 
-- CODE:
var=print("Quantidade de Jogos:5")
print(var)
var1= print("frete")
-- OUTPUT:
Quantidade de Jogos:5
None
frete
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:52:59) 
-- CODE:
var=print("Quantidade de Jogos:5")
print(var)
var1= print("frete")
-- EXECUTION TIME:
0.238529
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de Jogos:5
None
frete
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de Jogos:5
None
frete
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de Jogos:5
None
frete
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:53:17) 
-- CODE:
var=print(int("Quantidade de Jogos:5")
print(var)
var1= print("frete")
-- ERROR:
File "XXXX", line 2
    print(var)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:53:32) 
-- CODE:
var=print(int("Quantidade de Jogos:5")
print(int(var)
var1= print("frete")
-- ERROR:
File "XXXX", line 2
    print(int(var)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:03:57) 
-- CODE:
a=int(input("Quantidade de Jogos?")
b=float(input("Qual o valor do jogo?"))
c= float(input("Qual o valor do frete?")

-- ERROR:
File "XXXX", line 2
    b=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:23:17) 
-- CODE:
a= int(input("Quantidade de Jogos?")
b= float(input("Qual o valor do jogo?"))
c= float(input("Qual o valor do frete?")
print((a*b)+c)

-- ERROR:
File "XXXX", line 2
    b= float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:25:59) 
-- CODE:
a= int(input("Quantidade de Jogos?"))
b= float(input("Qual o valor do jogo?"))
c= float(input("Qual o valor do frete?"))
print((a*b)+c)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:26:02) 
-- CODE:
a= int(input("Quantidade de Jogos?"))
b= float(input("Qual o valor do jogo?"))
c= float(input("Qual o valor do frete?"))
print((a*b)+c)

-- EXECUTION TIME:
0.182643
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
